# RouteSpoofer

./: .gitignore  .gitmodules  APK-outputs.lnk  README.md  adb-install_release.bat  build-apk_android.bat  build-apk_android_aarch64.bat  build-apk_debug_android.bat  cargo-sweep-older-7days.bat  index.html  package-lock.json  package.json  start.bat  start_android.bat  vite.config.ts
src/: App.module.scss  App.tsx  global.scss  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
