[package]
name = "routespoofer"
version = "0.0.1"
authors = ["EVERMEDIA PROJECT"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "routespoofer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-geolocation = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-android-mock-location = { git = "https://github.com/immorrtalz/tauri-plugin-android-mock-location" }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization
lto = true # Enables link-time-optimizations
opt-level = "s" # `"s"` Prioritizes small binary size. Use `3` if you prefer speed
panic = "abort" # Higher performance by disabling panic handlers
strip = true # Ensures debug symbols are removed
